Fix Searchbar taking too much horizontal space

--- a/client/src/components/ReviewList/styles.css
+++ b/client/src/components/ReviewList/styles.css
@@ -59,7 +59,6 @@
 
 .composeReviewSidePanel {
     display: inline-block;
-    min-width: 220px;
 }
 .composeReviewBody {
     width: 425px;
